--- a/AutoUpdate/AutoUpdate/Aostar.MVP.DownloadService/App.config
+++ b/AutoUpdate/AutoUpdate/Aostar.MVP.DownloadService/App.config
@@ -12,6 +12,8 @@
     <add key="HeartFrequency" value="7200"/>
     <!--客户端应用程序-->
     <add key="ClientApp" value="Aostar.MVP.Client.exe"/>
+    <!--是否启用FTP被动模式-->
+    <add key="EnablePassive" value="true"/>
   </appSettings>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
